# Auritia

./: LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pr.yml  smonk.yml
scripts/: bump.js
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clock.rs  engine.rs  interface.rs  main.rs  menu.rs  metronome.rs  panic_handler.rs  util.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/interface/: mod.rs
src/components/: ControlButtons.vue  Footer.vue  Header.vue  MenuBar.vue  Navigation.vue  Timeline.vue
src/components/shared/: Button.vue  Menu.vue  MenuOption.vue  MenuSplitter.vue  ResizableDiv.vue  Slider.vue
src/constants/: index.ts
src/logic/: Debug.ts  DynamicCanvas.ts  TimelineRenderer.ts  index.ts
src/state/: index.ts  shortcuts.ts  store.ts  windows.ts
